# algdspolytech20252026

./: CMakeLists.txt  README.md  knapsack.c  knapsack.h
Lab/: README.md  Tests.cpp  queue.h
src/: queue.c
test/: Test.cpp  Tests.cpp
